--- a/index.html
+++ b/index.html
@@ -243,12 +243,12 @@
     </a>
 
 
-<script src="https://cdn.jsdelivr.net/gh/dreamMilk/dreamMilk.github.io/media/js/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/dreamMilk/dreamMilk.github.io/media/js/lately.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/dreamMilk/dreamMilk.github.io/media/js/waterfall.min.js"></script>
-<script async src="https://cdn.jsdelivr.net/gh/dreamMilk/dreamMilk.github.io/media/js/slimbox2.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/dreamMilk/dreamMilk.github.io/media/js/functions.js"></script>
-<script async src="https://cdn.jsdelivr.net/gh/dreamMilk/dreamMilk.github.io/media/js/func.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dreamMilk/dreamMilk@master/media/js/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dreamMilk/dreamMilk@master/media/js/lately.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dreamMilk/dreamMilk@master/media/js/waterfall.min.js"></script>
+<script async src="https://cdn.jsdelivr.net/gh/dreamMilk/dreamMilk@master/media/js/slimbox2.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dreamMilk/dreamMilk@master/media/js/functions.js"></script>
+<script async src="https://cdn.jsdelivr.net/gh/dreamMilk/dreamMilk@master/media/js/func.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"></script>
 
 
